<resources>
    <string name="app_name">VTPVistorias-TCC</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item_sair">Sair</string>
    <string name="item_configuracao">Configuração</string>
    <string name="botao_voltar">Voltar</string>
    <string name="botao_proximo">Próximo</string>
    <string name="hint_prefixo">Prefixo do Veiculo</string>
    <string name="mensagem_iniciarInspecao">Insira o Prefixo do veiculo para iniciar o processo de inspeção</string>
    <string name="mensagem_detalhesVeiculo">Confirme os dados do veiculo:</string>
    <string name="label_prefixo">Prefixo:</string>
    <string name="label_placa">Placa:</string>
    <string name="label_chassi">Chassi:</string>
    <string name="label_empresa">Empresa:</string>
    <string name="label_bloqueado">Bloqueado:</string>
    <string name="sim">Sim</string>
    <string name="não">Não</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_deslogar">Deslogar</string>
    <string name="action_ajuda">Ajuda</string>
    <string name="botao_salvar">Salvar</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="botao_nova_vistoria">Iniciar novo processo de Inspeção</string>
    <string name="botao_consultar_vistoria">Consultar Vistoria</string>
    <string name="digitar_numero_veiculo_texto">Digite o número do veículo</string>
    <string name="grupoA">Grupo A</string>
    <string name="grupoA1">Grupo A1</string>
    <string name="grupoB">Grupo B</string>
    <string name="escolhaGrupoView">Escolha o grupo da ficha para preenchimento</string>
    <string name="itens_ficha">Esta ficha abrange os seguintes itens:</string>
    <string name="continuar">Deseja Continuar?</string>
    <string name="itens_fichaA1">* Elevador \n\n* Rampa \n\n*Área reservada - Box\n\n*Itens de segurança\n\n*Identidade visual</string>
    <string name="itens_fichaA">* Freios\n\n*Suspensão\n\n*Tranção\n\n*Sistema Rodante\n\n*Direção/Eixo Dianteiro\n\n*Chassi/Plataforma\n\n*Teste Fuligem</string>
    <string name="itens_fichaB">* Carroceria interna e externa\n\n*Iluminação interna e externa\n\n*Posto de comando\n\n*Sistema Elétrico\n\n*Equip. obrigatórios\Segurança\n\n*Limpeza</string>
    <string name="title_activity_grupo_b">GrupoBActivity</string>

</resources>
