<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/altura_dialogos"
    android:background="#58C3BF"
    tools:context=".activity.ItensFichaActivity">


    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/itens_ficha"
        android:textColor="@color/branco" />

    <TextView
        android:id="@+id/textViewConfirma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:text="@string/continuar"
        android:textColor="@color/branco" />

    <TextView
        android:id="@+id/textViewConteudo"
        android:layout_width="245dp"
        android:layout_height="153dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:scrollbars="vertical"
        android:textColor="@color/branco" />


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="42dp"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/button_nao_FichaA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="#E0FFFF"
            android:text="@string/não"
            android:textColor="@color/preto" />

        <Button
            android:id="@+id/button_sim_FichaA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="#E0FFFF"
            android:text="@string/sim"
            android:textColor="@color/preto" />


    </TableRow>
</RelativeLayout>