<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EfetuarLacracaoVeiculoActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="Lacrar Veículo VTP"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:text="Informações do Veículo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_labelPrefixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="149dp"
        android:text="@string/label_prefixo" />

    <TextView
        android:id="@+id/textView_Prefixo"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/botaoLacrar"
        android:layout_alignTop="@+id/textView_labelPrefixo" />

    <TextView
        android:id="@+id/textView_labelPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="186dp"
        android:text="@string/label_placa" />

    <TextView
        android:id="@+id/textView_Placa"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_Prefixo"
        android:layout_alignTop="@+id/textView_labelPlaca" />

    <TextView
        android:id="@+id/textView_labelChassi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="229dp"
        android:text="@string/label_chassi" />

    <TextView
        android:id="@+id/textView_Chassi"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_Prefixo"
        android:layout_alignTop="@+id/textView_labelChassi" />

    <TextView
        android:id="@+id/textView_labelEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="223dp"
        android:text="@string/label_empresa" />

    <TextView
        android:id="@+id/textView_Empresa"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_Prefixo"
        android:layout_alignTop="@+id/textView_labelEmpresa" />

    <TextView
        android:id="@+id/textView_labelBloqueado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="184dp"
        android:text="@string/label_bloqueado" />

    <TextView
        android:id="@+id/textView_Bloqueado"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_Prefixo"
        android:layout_alignTop="@+id/textView_labelBloqueado" />

    <Button
        android:id="@+id/botaoVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_labelPrefixo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="93dp"
        android:text="Cancelar" />

    <Button
        android:id="@+id/botaoLacrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/botaoVoltar"
        android:layout_marginEnd="52dp"
        android:text="Lacrar" />


</RelativeLayout>